--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   basic_utils: ^5.6.1
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.3.6
   go_router: ^9.0.3
 
 dev_dependencies:
